LIVIJUKU-846 - kilpailutustoimintojen käyttöoikeuksien huomioiminen käyttöliittymässä - 1. versio

--- a/app/scripts/components/formInput/date-input.html
+++ b/app/scripts/components/formInput/date-input.html
@@ -12,9 +12,10 @@
          datepicker-options="dateOptions"
          is-open="isOpen"
          ng-required="required"
+         ng-readonly="readonly"
          show-button-bar="false" noenter/>
 
-  <span class="input-group-btn">
+  <span class="input-group-btn" ng-hide="readonly">
     <button
       type="button"
       class="btn"
