--- a/app/scripts/views/tunnusluvut/muokkaus-me.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-me.html
@@ -14,7 +14,9 @@
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus"
-                                             tyyppi="ME"></juku-tunnusluvut-liikennointikorvaukset>
+                                             organisaatio="organisaatio"
+                                             tyyppi="ME">
+    </juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lisatiedot lisatiedot="tunnusluvut.kommentti" tyyppi="ME"></juku-tunnusluvut-lisatiedot>
