--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -18,7 +18,9 @@
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus"
-                                             tyyppi="BR"></juku-tunnusluvut-liikennointikorvaukset>
+                                             organisaatio="organisaatio"
+                                             tyyppi="BR">
+    </juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="BR"></juku-tunnusluvut-lipputulot>
