--- a/app/scripts/views/tunnusluvut/muokkaus-sa.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-sa.html
@@ -13,7 +13,9 @@
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus"
-                                             tyyppi="SA"></juku-tunnusluvut-liikennointikorvaukset>
+                                             organisaatio="organisaatio"
+                                             tyyppi="SA">
+    </juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="SA"></juku-tunnusluvut-lipputulot>
