LIVIJUKU-922 Muutettu painikkeen teksti ja korjattu vuosivalikoon liittynyt epäkohta.

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -1,11 +1,11 @@
 <div class="container">
 
   <h1 class="Mb-md">Kilpailutukset
-  <button
-    ng-click="newKilpailutus()"
-    class="btn btn-success btn-lg pull-right">
-    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää uusi kilpailutus
-  </button>
+    <button
+      ng-click="newKilpailutus()"
+      class="btn btn-success btn-lg pull-right">
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää uusi kilpailutus tai liikennöintisopimus
+    </button>
   </h1>
 
   <form class="Mb-lg">
