LIVIJUKU-921 Painiketta piti pienentää, jotta se sopii 320px leveydelläkin kokonaan ruudulle. Tämä aiheutti tarpeen korjata painikkeen sijaintia pystysuunnassa. Hienosäädin samalla hieman sivun tyylejä muutenkin.

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -369,6 +369,10 @@ textarea
 .Ms-0
   margin-left: 0 !important
 
+.My-xl
+  margin-top: 2em
+  margin-bottom: 2em
+
 .Mb-xs
   margin-bottom: 0.5em !important
 
@@ -386,6 +390,9 @@ textarea
 
 .Mb-xl
   margin-bottom: 2em
+
+.P-xl
+  padding: 2em
 
 .block
   display: block !important
@@ -411,3 +418,21 @@ textarea
   padding-top: 1em
   padding-bottom: 1em
   margin: 0 auto
+
+.flex
+  display: flex
+
+.flex-ai-c
+  align-items: center
+
+.flex-1
+  flex: 1
+
+.flex-d-c
+  flex-direction: column
+
+@media (min-width: 768px)
+  .r-sm-flex-d-r
+    flex-direction: row
+  .r-sm-M-0
+    margin: 0;
