--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -1,14 +1,19 @@
 <div class="container">
 
-  <h1 class="Mb-md">Kilpailutukset
-    <button
-      ng-click="newKilpailutus()"
-      class="btn btn-success btn-lg pull-right">
-      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää uusi kilpailutus tai liikennöintisopimus
-    </button>
-  </h1>
+  <div class="flex flex-d-c r-sm-flex-d-r flex-ai-c">
+    <div class="flex-1">
+      <h1 class="Mb-md">Kilpailutukset</h1>
+    </div>
+    <div class="Mb-xl r-sm-M-0">
+      <button
+        ng-click="newKilpailutus()"
+        class="btn btn-success btn-md pull-right">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää kilpailutus tai liikennöintisopimus
+      </button>
+    </div>
+  </div>
 
-  <form class="Mb-lg">
+  <form style="background-color: #f2f2f2;" class="P-xl">
   	<div class="row">
 	  	<form-group label="Toimivaltainen viranomainen" class="col-xs-12 col-sm-6 col-md-6">
         <tags-input id="organisaatio-filter" name="organisaatio-filter"
@@ -79,38 +84,38 @@
     </div>
   </form>
 
-  <div class="row Mb-md">
-      <div class="col-md-2">
+  <div class="row My-xl f-12">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div style="width: 20px; height: 20px; background-color: #3385D6; float: left;">
           &nbsp;
         </div>
         <div style="margin-left: 2em;">Tarjousaika</div>
       </div>
-      <div class="col-md-2">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div style="width: 20px; height: 20px; background-color: #C266EB; float: left;">
           &nbsp;
         </div>
         <div style="margin-left: 2em;"> Tarjousten käsittely ja hankintapäätös</div>
       </div>
-      <div class="col-md-2">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div style="width: 20px; height: 20px; background-color: #FFA033; float: left;">
           &nbsp;
         </div>
         <div style="margin-left: 2em;"> Liikennöinnin valmistelu</div>
       </div>
-      <div class="col-md-2">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div style="width: 20px; height: 20px; background-color: #33BB33; float: left;">
           &nbsp;
         </div>
         <div style="margin-left: 2em;"> Liikennöinti (sopimuskausi)</div>
       </div>
-      <div class="col-md-2">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div style="width: 20px; height: 20px; background-color: #66CCD6; float: left;">
           &nbsp;
         </div>
         <div style="margin-left: 2em;"> Hankitut optiot</div>
       </div>
-      <div class="col-md-2">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div style="width: 20px; height: 20px; background-color: #cfeff2; border: 1px dashed #66CCD6; float: left;">
           &nbsp;
         </div>
