LIVIJUKU-863 - kilpailutusten lataus linkki käyttöliittymään

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -130,4 +130,7 @@
   	events="timeline.events">
   </timeline>
 
+  <p class="Mt-md">
+    <a href="api/kilpailutukset/csv/kilpailutukset.csv"><span class="glyphicon glyphicon-save"></span> Lataa kaikki kilpailutukset csv-tiedostona</a>
+  </p>
 </div>
