LIVIJUKU-691 - tunnuslukujen latauspalvelun linkki käyttöliittymään

--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -62,5 +62,7 @@
       </juku-controls>
     </div>
   </form>
-  <br/>
+  <p class="Mt-md" ng-show="hasLoadAllTunnusluvutPermission">
+    <a href="api/tunnusluku/csv/tunnusluvut.csv"><span class="glyphicon glyphicon-save"></span> Lataa kaikki tunnusluvut csv-tiedostona</a>
+  </p>
 </div>
