style attribuutti korvattu bootstrap vastineella

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <form style="background-color: #f2f2f2;" class="P-xl">
+  <form class="P-xl well">
   	<div class="row">
 	  	<form-group label="Toimivaltainen viranomainen" class="col-xs-12 col-sm-6 col-md-6">
         <tags-input id="organisaatio-filter" name="organisaatio-filter"
