kilpailutukset näytön viilausta 2

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -85,37 +85,37 @@
   </form>
 
   <div class="row My-xl f-12">
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4 Mb-xs">
       <div style="width: 20px; height: 20px; background-color: #3385D6; float: left;">
         &nbsp;
       </div>
       <div style="margin-left: 2em;">Tarjousaika</div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4 Mb-xs">
       <div style="width: 20px; height: 20px; background-color: #C266EB; float: left;">
         &nbsp;
       </div>
       <div style="margin-left: 2em;"> Tarjousten käsittely ja hankintapäätös</div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4 Mb-xs">
       <div style="width: 20px; height: 20px; background-color: #FFA033; float: left;">
         &nbsp;
       </div>
       <div style="margin-left: 2em;"> Liikennöinnin valmistelu</div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4 Mb-xs">
       <div style="width: 20px; height: 20px; background-color: #33BB33; float: left;">
         &nbsp;
       </div>
       <div style="margin-left: 2em;"> Liikennöinti (sopimuskausi)</div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4 Mb-xs">
       <div style="width: 20px; height: 20px; background-color: #66CCD6; float: left;">
         &nbsp;
       </div>
       <div style="margin-left: 2em;"> Hankitut optiot</div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4 Mb-xs">
       <div style="width: 20px; height: 20px; background-color: #cfeff2; border: 1px dashed #66CCD6; float: left;">
         &nbsp;
       </div>
