kilpailutukset aikajana:  normikokonen teksti mahtuu kausien kuvauksiin ihan yhtä hyvin

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -84,7 +84,7 @@
     </div>
   </form>
 
-  <div class="row My-xl f-12">
+  <div class="row My-xl">
     <div class="col-xs-12 col-sm-6 col-md-4 Mb-xs">
       <div style="width: 20px; height: 20px; background-color: #3385D6; float: left;">
         &nbsp;
