--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="Mb-md">Oma kuvaaja tunnusluvuista</h1>
+  <h1 class="Mb-md">Kaikki tunnusluvut</h1>
   <form id="tunnusluku-valinta-form" name="tunnusluku-valinta-form" class="form-inline tunnusluku-valinta-form">
     <form-group label="Valitse tarkasteltava tunnusluku">
         <select id="tunnusluku" ng-model="params.tunnuslukuid"
