--- a/app/scripts/views/tunnusluvut/raportit-tunnuslukukuvaajat.html
+++ b/app/scripts/views/tunnusluvut/raportit-tunnuslukukuvaajat.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="Mb-md">Tunnuslukukuvaajat</h1>
+  <h1 class="Mb-md">Perustunnusluvut</h1>
   <juku-navigation>
     <juku-tabs>
       <juku-tab
