--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -398,7 +398,13 @@
         <table class="table table-hover table-condensed">
           <thead>
             <tr>
-              <th class="col-md-6">Lippuen asiakashinnat</th>
+              <th class="col-md-6">
+                <div uib-tooltip="{{haeTunnuslukuTooltip('LIPPUHINTA')}}"
+                     tooltip-placement="top"
+                     tooltip-append-to-body="true">Lippujen asiakashinnat (sis. alv)
+                     <span class="text-info small glyphicon glyphicon-question-sign"></span>
+                </div>
+              </th>
               <th ng-repeat="vyohyke in tunnusluvut.lippuhinta" class="col-md-1">{{vyohyke.vyohykemaara}} vyöhyke</th>
             </tr>
           </thead>
