LIVIJUKU-899 - throttle-mekanismi aikajanan päivittämiseen - aikajana päivitetään sekunnin päästä kun suodatusehdot on muuttuneet - suodatusehtojen päivitys keskeyttää edeltävän päivityksen - aikajanan voi päivittää maksimissaan vain sekunnin välein

--- a/app/scripts/components/timeline/index.html
+++ b/app/scripts/components/timeline/index.html
@@ -1,1 +1,8 @@
-<div class="visualization"></div>
+
+<p class="f-10 M-0" ng-show="!redrawing">Voit zoomata aikajanaa hiiren rullalla. Aikajanan vieritys onnistuu liikuttamalla hiirtä vasen nappi pohjassa.</p>
+<div class="visualization" ng-show="!redrawing"></div>
+<div class="alert alert-info" ng-if="redrawing">
+  <p>
+    <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span> Aikajanaa päivitetään
+  </p>
+</div>
