LIVIJUKU-899 - parempi mekanismi keskeneräisen aikajanan piilottamiseen

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -43,3 +43,4 @@
 @import '../scripts/components/ely/kehittamishankkeet'
 @import '../scripts/components/ely/maararahatarpeet'
 @import '../scripts/components/taydennysdialogi'
+@import '../scripts/components/timeline'
