--- a/app/scripts/components/timeline/index.html
+++ b/app/scripts/components/timeline/index.html
@@ -1,8 +1,8 @@
-
-<p class="f-10 M-0" ng-show="!redrawing">Voit zoomata aikajanaa hiiren rullalla. Aikajanan vieritys onnistuu liikuttamalla hiirtä vasen nappi pohjassa.</p>
-<div class="visualization" ng-show="!redrawing"></div>
 <div class="alert alert-info" ng-if="redrawing">
   <p>
     <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span> Aikajanaa päivitetään
   </p>
 </div>
+<p class="f-10 M-0" ng-hide="redrawing">Voit zoomata aikajanaa hiiren rullalla. Aikajanan vieritys onnistuu liikuttamalla hiirtä vasen nappi pohjassa.</p>
+<div class="visualization" ng-class="{'timeline-hide': redrawing}"></div>
+
