LIVIJUKU-944 - nvd3 tyylimuutos focus charttiin + samalla korjattu nvd3 tyylien importointi järkeväksi

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -1,7 +1,7 @@
 @import './loading-bar.css'
 @import './ui-grid.min.css'
 @import './vis.css'
-@import './nv.d3.css'
+@import './nv.d3.styl'
 @import './xeditable.css'
 @import './nya-bs-select.css'
 @import './ng-tags-input.styl'
