--- a/app/styles/nv.d3.css
+++ b/app/styles/nv.d3.css
@@ -1,3 +1,4 @@
+/* Tämä on versio: https://github.com/novus/nvd3/blob/e3f59ee92894e97cd24a0c57ef96407cfbf085dd/build/nv.d3.css */
 
 /********************
  * HTML CSS
