--- a/app/scripts/components/formInput/input-compact.html
+++ b/app/scripts/components/formInput/input-compact.html
@@ -1,13 +1,13 @@
 <div class="form-group"
      uib-tooltip="{{tooltipText()}}"
      tooltip-placement="top"
-     tooltip-enable="input().$invalid">
+     tooltip-enable="inputModel().$invalid">
 
   <label for="{{name}}" class="sr-only">{{label}}</label>
 
   <ng-transclude></ng-transclude>
 
-  <span ng-show="input().$invalid && input().$touched && feedbackSupport"
+  <span ng-show="inputModel().$invalid && inputModel().$touched && feedbackSupport"
         class="glyphicon glyphicon-warning-sign form-control-feedback"
         aria-hidden="true"></span>
 </div>
