LIVIJUKU-1012 - liikenneviraston käyttäjien poiston korjaus. Templaatissa "juku-delete-kayttaja-link" käyttäjä objekti pitää olla scopessa nimellä kayttaja. Templaatti ei avaa uutta scopea ja niiden käyttö perustuu konventioon.

--- a/app/scripts/views/yhteinen/delete-kayttaja-link.html
+++ b/app/scripts/views/yhteinen/delete-kayttaja-link.html
@@ -2,6 +2,6 @@
     varmistusotsake="Oletko varma että haluat merkitä käyttäjän poistetuksi juku-järjestelmästä? "
     varmistusteksti="Poistetulle käyttäjälle ei enää lähetetä sähköposti-ilmoituksia ja käyttäjää ei näytetä käyttäjälistauksissa. Käyttäjän poistaminen juku-järjestelmästä ei poista käyttäjän liikenneviraston käyttäjätunnusta eikä estä käyttäjää kirjautumasta juku-järjestelmään. Jos käyttäjä halutaan kokonaan poistaa, niin käyttäjä pitää poistaa liikenneviraston käyttäjähallinnasta ja tämän jälkeen juku-järjestelmästä."
 
-    operaatio="delete(viranomainen.tunnus)">
+    operaatio="delete(kayttaja.tunnus)">
   <span class="glyphicon glyphicon-remove-sign"></span> Poista
 </a>
