LIVIJUKU-1045 - asiakastuki + käyttäjätiedot sivu päivitetty

--- a/app/scripts/views/yhteinen/asiakastuki.html
+++ b/app/scripts/views/yhteinen/asiakastuki.html
@@ -7,7 +7,7 @@
     <div class="col-md-4">
       <label>Sähköposti</label>
 
-      <p><a href="mailto:asiakastuki@liikennevirasto.fi" target="_top">asiakastuki@liikennevirasto.fi</a></p>
+      <p><a href="mailto:liikennevirasto.asiakastuki@cgi.com" target="_top">liikennevirasto.asiakastuki@cgi.com</a></p>
     </div>
     <div class="col-md-4">
       <label>Puhelinnumero</label>
