--- a/app/scripts/views/yhteinen/kayttajatiedot.html
+++ b/app/scripts/views/yhteinen/kayttajatiedot.html
@@ -29,7 +29,7 @@
      </tbody>
   </table>
 
-  <h3>LIIKENNEVIRASTON HENKILÖT</h3>
+  <h3>LIIKENNE- JA VIESTINTÄVIRASTON HENKILÖT</h3>
   <table st-table="liikennevirasto" class="table table-condensed"
          st-safe-src=liikenneviraston_henkilot>
     <thead>
