--- a/app/scripts/components/paatosTiedot/index.html
+++ b/app/scripts/components/paatosTiedot/index.html
@@ -11,9 +11,9 @@
   </p>
 
   <p>
-    <a href="resources/OIKAISUVAATIMUSOSOITUS.docx" target="_blank">
+    <a href="resources/oikaisuvaatimusohje.pdf" target="_blank">
       <span class="glyphicon glyphicon-file"></span>
-      Avaa oikaisuvaatimusosoitus (DOCX)
+      Avaa oikaisuvaatimusohje (pdf)
     </a>
   </p>
 </div>
