--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -4,7 +4,7 @@
     <form-group label="Valitse tarkasteltava tunnusluku">
         <select id="tunnusluku" ng-model="params.tunnuslukuid"
                 placeholder="Valitse tunnusluku" name="tunnuslukuValinta">
-          <option value="" selected disabled>Valitse tunnusluku</option>
+          <option value="" disabled>Valitse tunnusluku</option>
           <option ng-repeat="tunnusluku in tunnusluvut" value="{{tunnusluku.id}}">{{tunnusluku.nimi}}</option>
         </select>
     </form-group>
@@ -31,7 +31,7 @@
       <form-group label="{{filter.nimi}}" ng-repeat="filter in chart.filters">
           <select id="tunnusluku-filter-form-{{filter.id}}" ng-model="params.charts[chartid].filter[filter.id]"
                   placeholder="Valitse tunnusluku" name="tunnuslukuValinta">
-            <option value="" selected disabled>Valitse rajoite</option>
+            <option value="" disabled>Valitse rajoite</option>
             <option ng-repeat="id in filter.values.$order" value="{{id}}">{{filter.values.$nimi(id)}}</option>
           </select>
       </form-group>
